Cleanup in build files and added missing import to a test.